--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "@MUK-Dev/react-mui-event-calendar",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "An event calendar/schedular used to display events/data in a calendar.",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/MUK-Dev"
   },
   "scripts": {
-    "rollup": "rollup -c --bundleConfigAsCjs",
-    "start": "react-scripts start"
+    "rollup": "rollup -c"
   },
   "author": "MUK-Dev",
   "license": "ISC",
+  "keywords": [
+    "react",
+    "react-component",
+    "mui",
+    "react-mui-event-calendar",
+    "calendar"
+  ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/react": "^17.0.34",
-    "react": "^17.0.2",
+    "@rollup/plugin-typescript": "^8.3.3",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.4.0",
     "typescript": "^4.4.4"
+  },
+  "peerDependencies": {
+    "@types/react": "^17.0.0",
+    "react": "^17.0.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
