--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "@MUK-Dev/react-mui-event-calendar",
-  "version": "1.0.3",
+  "name": "react-mui-event-calendar",
+  "version": "1.1.2",
   "description": "An event calendar/schedular used to display events/data in a calendar.",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/MUK-Dev"
-  },
   "scripts": {
     "rollup": "rollup -c"
   },
@@ -29,8 +26,8 @@
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "@types/react": "^17.0.0",
-    "react": "^17.0.0"
+    "@types/react": "^18.0.0",
+    "react": "^18.0.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
