--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "react-mui-event-calendar",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "An event calendar/schedular used to display events/data in a calendar.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MUK-Dev/react-mui-event-calendar"
+  },
   "scripts": {
     "rollup": "rollup -c"
   },
-  "author": "MUK-Dev",
+  "author": "@MUK-Dev",
   "license": "ISC",
   "keywords": [
     "react",
