--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "react-mui-event-calendar",
-  "version": "1.1.6",
+  "version": "1.2.0",
   "description": "An event calendar/schedular used to display events/data in a calendar.",
   "repository": {
     "type": "git",
     "url": "https://github.com/MUK-Dev/react-mui-event-calendar"
   },
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "@MUK-Dev",
   "license": "ISC",
+  "type": "module",
   "keywords": [
     "react",
     "react-component",
@@ -19,32 +22,43 @@
     "calendar"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "rollup": "^2.60.0",
-    "rollup-plugin-dts": "^4.0.1",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.1",
+    "@storybook/addon-essentials": "^7.0.21",
+    "@storybook/addon-interactions": "^7.0.21",
+    "@storybook/addon-links": "^7.0.21",
+    "@storybook/blocks": "^7.0.21",
+    "@storybook/react": "^7.0.21",
+    "@storybook/react-webpack5": "^7.0.21",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^3.25.1",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
+    "storybook": "^7.0.21",
+    "tslib": "^2.5.3",
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "@types/react": "^18.0.0",
-    "react": "^18.0.0"
-  },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
-  "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "@types/react": "^18.0.0",
     "moment": "^2.29.4",
-    "mui-color": "^2.0.0-beta.2"
-  }
+    "react": "^18.0.0"
+  },
+  "main": "dist/cjs/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/react-mui-event-calendar.d.ts"
 }
