--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-storybook": "storybook build"
   },
   "author": "@MUK-Dev",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "keywords": [
     "react",
